# detector-cpp

./: README.md
deploy-detector-cpp/: Dockerfile  app.py  readme.md
deploy-detector-cpp/deploy-debian-pkg/DEBIAN/: control
deploy-detector-cpp/deploy-debian-pkg/usr/local/lib/: libopencv_calib3d.so.4.10.0  libopencv_flann.so.4.10.0  libopencv_highgui.so.4.10.0  libopencv_imgcodecs.so.4.10.0  libopencv_ml.so.4.10.0  libopencv_photo.so.4.10.0  libopencv_stitching.so.4.10.0  libopencv_video.so.4.10.0
deploy-detector-cpp/deploy-debian-pkg/usr/share/applications/: myapp.desktop
deploy-detector-cpp/deploy-debian-pkg/usr/share/myapp/: app.py
deploy-detector-cpp/deploy-debian-pkg/usr/share/myapp/templates/: index.html
deploy-detector-cpp/deploy-docker-compose/: deploy-docker-compose.md  docker-compose.yml
deploy-detector-cpp/deploy-docker-swarm/: deploy-docker-swarm.md  docker-compose.yml
deploy-detector-cpp/deploy-kubernetes/: deploy-kubernetes.md  deployment.yml  service.yml
deploy-detector-cpp/lib/: libopencv_features2d.so.4.10.0  libopencv_objdetect.so.4.10.0  libopencv_videoio.so.4.10.0
detector-cpp/: CMakeLists.txt  infer_opencv_detector_multithreading_multiple_cameras.cpp
